--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd92a7">  <td>22/04/13 16:35:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="screenshot.ScreenshotsDemo()[pri:0, instance:SSinSelenium.screenshot@7a5d012c]">ScreenshotsDemo</td> 
-  <td>main@1778535015</td>   <td></td> </tr>
+<tr bgcolor="c36584">  <td>22/04/13 17:18:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="screenshot.ScreenshotsDemo()[pri:0, instance:SSinSelenium.screenshot@5f2050f6]">ScreenshotsDemo</td> 
+  <td>main@194494468</td>   <td></td> </tr>
+<tr bgcolor="c36584">  <td>22/04/13 17:18:42</td>   <td>6645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;screenshot.tearDown(org.testng.ITestResult)[pri:0, instance:SSinSelenium.screenshot@5f2050f6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@194494468</td>   <td></td> </tr>
 </table>
